# FullyHacks2026

./: .gitignore  DEVPOST.md  README.md  demo-day.md  gemini.py  label.sh  pyproject.toml  requirements.txt  start.sh  webscraper.py  ytwebscraper.py
api/: __init__.py  main.py  models.py
detection_pipeline/: __init__.py  __main__.py  config.py  discovery.py  gemini_client.py  local_inference.py  pipeline.py  upload.py  yolo.py
docs/: 2026-04-18-detection-labeling-pipeline-design.md
docs/superpowers/specs/: 2026-04-18-review-ui-design.md  2026-04-19-home-launch-screen-design.md
tests/: test_api.py  test_discovery.py  test_gemini.py  test_pipeline.py  test_yolo.py
tools/: webscraper.py  ytwebscraper.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  api.ts  index.css
ui/src/components/: ActionButtons.tsx  CompletionScreen.tsx  HUD.tsx  HomeOcean.tsx  HomeScreen.tsx  ImageCard.tsx  KeyHints.tsx  LoadingState.tsx  OceanEnvironment.tsx  ProgressBar.tsx  RestartModal.tsx  RunProgress.tsx  creatures.css  home-ocean.css  ocean.css
