[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "detection-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "inference>=0.18.0",
    "requests>=2.28.0",
    "Pillow>=9.0.0",
    "opencv-python-headless>=4.5.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["detection_pipeline*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
